# cmake-duplicate-lib-bug

./: CMakeLists.txt  a.cpp  b.cpp
